--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "devDependencies": {
     "@openzeppelin/contracts": "^3.4.1",
     "@truffle/hdwallet-provider": "^2.0.4",
-    "truffle-plugin-verify": "^0.5.22",
-    "web3": "^1.7.1"
-  },
-  "dependencies": {
-    "truffle": "^5.6.7"
+    "web3": "^1.7.1",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@supercharge/strings": "^1.25.0",
+    "hardhat": "^2.22.16"
   }
 }
