--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
+  "name": "erc721-ux",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "ethers": "^6.13.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
-    "@openzeppelin/contracts": "^3.4.1",
-    "@truffle/hdwallet-provider": "^2.0.4",
-    "web3": "^1.7.1",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@supercharge/strings": "^1.25.0",
-    "hardhat": "^2.22.16"
+    "@eslint/js": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "vite": "^6.0.1"
   }
 }
