--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "ethers": "^6.13.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -26,9 +27,7 @@
     "globals": "^15.12.0",
     "vite": "^6.0.1"
   },
-  
   "engines": {
-  "node": ">=14"
-}
-
+    "node": ">=14"
+  }
 }
